# analog-ptq

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_backup.txt
analog_ptq/: __init__.py
analog_ptq/config/: __init__.py  schema.py
analog_ptq/evaluation/: __init__.py  harness.py  metrics.py
analog_ptq/models/: __init__.py  loader.py  wrapper.py
analog_ptq/noise/: __init__.py  dynamic.py  functions.py  injector.py
analog_ptq/pipeline/: __init__.py  comparison.py  registry.py  runner.py
analog_ptq/quantization/: __init__.py  base.py  calibration.py  gptq.py  na_gptq.py  sigma_models.py  utils.py
analog_ptq/utils/: __init__.py  logging.py
configs/examples/: comparison_gpt2_small.yaml  comparison_gptq_vs_nagptq.yaml  comparison_noise_sweep.yaml  comparison_small_model.yaml  comparison_with_noise.yaml  eval_only.yaml  llama_gptq.yaml  llama_gptq_with_noise.yaml  llama_na_gptq.yaml  mistral_gptq.yaml
scripts/: compare_models.py  run_experiment.py  test_quantized_model.py
tests/: __init__.py  test_na_gptq.py
